--- a/Survey/styles/formal/base.css
+++ b/Survey/styles/formal/base.css
@@ -1644,17 +1644,17 @@ input[type=range]::-moz-range-track {
   border: 0;
   border-radius: 22px;
   width: 100%;
-  height: 22px;
+  height: 16px;
 }
 
-.has-value .flood-to-value::-moz-range-progress {
-  background-color: #449B9B !important;
+.has-value .flood-to-value::-moz-range-track {
+  background: var(--track-background-fill);
   height: 16px;
   border-top-left-radius: 16px;
   border-bottom-left-radius: 16px;
 }
 
-html[dir=rtl] .has-value .flood-to-value::-moz-range-progress {
+html[dir=rtl] .has-value .flood-to-value::-moz-range-track {
   border-radius: 0 16px 16px 0;
 }
 
