--- a/Survey/styles/informal/base.css
+++ b/Survey/styles/informal/base.css
@@ -1657,17 +1657,17 @@ input[type=range]::-moz-range-track {
   border: 0;
   border-radius: 5px;
   width: 100%;
-  height: 22px;
+  height: 16px;
 }
 
-.has-value .flood-to-value::-moz-range-progress {
-  background-color: rgba(212, 170, 73, 0.15) !important;
+.has-value .flood-to-value::-moz-range-track {
+  background: var(--track-background-fill);
   height: 16px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
 }
 
-html[dir=rtl] .has-value .flood-to-value::-moz-range-progress {
+html[dir=rtl] .has-value .flood-to-value::-moz-range-track {
   border-radius: 0 5px 5px 0;
 }
 
